<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/firstpage_2"

    >

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/app_main_font"
        android:gravity="center"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/app_main_font"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/place_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:background="@drawable/radius"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/app_main_font"
        android:text="@string/place_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/food_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/app_main_font"
        android:textStyle="bold"
        android:background="@drawable/radius"
        android:text="@string/food_button" />

    <Button
        android:id="@+id/user_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/app_main_font"
        android:textStyle="bold"
        android:background="@drawable/radius"
        android:text="@string/user_button" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/app_main_font"
        android:text="welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />


</LinearLayout>